First pass at rendering a tree with nested nodes

--- a/src/main.css
+++ b/src/main.css
@@ -1,1 +1,12 @@
-/* . */
+.node a {
+  display: inline-block;
+  margin: 0 10px 0 10px;
+}
+
+div.name {
+  display: inline-block; 
+}
+
+div.node div.children {
+  margin-left: 30px;
+}
