--- a/src/main.css
+++ b/src/main.css
@@ -7,6 +7,11 @@ div.name {
   display: inline-block; 
 }
 
+div.name:focus {
+  outline: none;
+  background-color: #f5f5aa;
+}
+
 div.node div.children {
   margin-left: 30px;
 }
