--- a/src/tree.css
+++ b/src/tree.css
@@ -86,6 +86,7 @@
   margin-left: -2ch;
   padding: 0 6px 0 6px;
   width: 1ch;
+  color: #aaa;
 }
 
 .node span.toggle.open:before {
@@ -149,7 +150,7 @@
 /* The first node in a tree is special (when not root node), we show it really big, without the star */
 .node.first > .nc .name {
   font-size: 150%;
-  margin: 0 0 6px 0;
+  margin: 0 0 6px 6px;
 }
 
 .node.first > .nc a, .node.first > .nc .toggle {
