Fixed a bug where nodes could be meged up when the previous sibling had children

--- a/src/css/tree.css
+++ b/src/css/tree.css
@@ -20,7 +20,7 @@
 
 .tree {
   /* Units in CSS: https://developer.mozilla.org/en-US/docs/Learn/CSS/Introduction_to_CSS/Values_and_units */
-  font: 1rem sans-serif;
+  font: 1rem helvetica, sans-serif;
   line-height: 1.4;
   margin: 24px auto 24px auto;
   /* Optimal width of text in a column: https://ux.stackexchange.com/a/3623 */
