--- a/src/css/tree.css
+++ b/src/css/tree.css
@@ -223,12 +223,13 @@
 /* Just the absolute basic styles for a responsive popup */
 .popup {
   background: white;
-  position: absolute;
+  display: none;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 1;
   width: 200px;
-  border-radius: 6px;
+  border-radius: 3px;
   padding: 6px;
   border: 1px #eee solid;
   /* transition: all 500ms cubic-bezier(0.250, 0.100, 0.250, 1.000); */
@@ -250,8 +251,13 @@
   content: '✕'; /* TODO: unicode something */
 }
 
+.closeButton:hover {
+  cursor: pointer;
+}
+
 .menuItem {
   display: block;
+  padding: 6px 12px 6px 12px;
 }
 
 .menuItem:hover {
@@ -264,12 +270,10 @@
 /* Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575px) {
   .popup {
-    position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     border: 0;
+    padding: 40px 0px 20px 0px;
   }
 
   .popup .closeButton {
