--- a/src/css/tree.css
+++ b/src/css/tree.css
@@ -220,24 +220,24 @@
     to { opacity: 1; }
 }
 
-/* Just the absolute basic styles for a responsive popup */
-.popup {
+/* Just the absolute basic styles for a responsive dialog */
+.dialog {
   background: white;
   display: none;
   position: fixed;
-  top: 0;
-  left: 0;
   z-index: 1;
-  width: 200px;
   border-radius: 3px;
   padding: 6px;
   border: 1px #eee solid;
   /* transition: all 500ms cubic-bezier(0.250, 0.100, 0.250, 1.000); */
   animation: fadeIn 150ms ease-out;
   box-shadow: 0px 3px 5px rgba(0,0,0,0.2);
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.popup .closeButton {
+.dialog .closeButton {
   position: absolute;
   top: 0;
   right: 0;
@@ -245,6 +245,10 @@
   padding: 6px;
   color: #aaa;
   font-size: 150%;
+}
+
+tree-opmlimport-dialog {
+  width: 300px;
 }
 
 .closeButton::before {
@@ -269,14 +273,14 @@
 
 /* Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575px) {
-  .popup {
+  .dialog {
     width: 100%;
     height: 100%;
     border: 0;
     padding: 40px 0px 20px 0px;
   }
 
-  .popup .closeButton {
+  .dialog .closeButton {
     position: fixed;
     display: block;
   }
