--- a/src/css/tree.css
+++ b/src/css/tree.css
@@ -229,9 +229,9 @@
   border-radius: 3px;
   padding: 6px;
   border: 1px #eee solid;
-  /* transition: all 500ms cubic-bezier(0.250, 0.100, 0.250, 1.000); */
   animation: fadeIn 150ms ease-out;
   box-shadow: 0px 3px 5px rgba(0,0,0,0.2);
+  /* To center horizontally and vertically as per https://stackoverflow.com/a/25829529/1996 */
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -244,15 +244,23 @@
   display: none;
   padding: 6px;
   color: #aaa;
-  font-size: 150%;
+  font-size: 1.5rem;
 }
 
 tree-opmlimport-dialog {
   width: 300px;
 }
 
+tree-opmlimport-dialog .error {
+  color: red;
+}
+
+tree-opmlimport-dialog .success {
+  color: green;
+}
+
 .closeButton::before {
-  content: '✕'; /* TODO: unicode something */
+  content: '✕';
 }
 
 .closeButton:hover {
