--- a/src/css/tree.css
+++ b/src/css/tree.css
@@ -4,7 +4,8 @@
 
 .tree {
   /* Units in CSS: https://developer.mozilla.org/en-US/docs/Learn/CSS/Introduction_to_CSS/Values_and_units */
-  font: 1rem helvetica, sans-serif;
+  font-size: 1rem;
+  font-family: helvetica, arial, sans-serif;
   line-height: 1.4;
   margin: 24px auto 24px auto;
   /* Optimal width of text in a column: https://ux.stackexchange.com/a/3623 */
@@ -14,14 +15,32 @@
   padding-left: 6ch;
 }
 
+.tree input {
+  /* By default input fields do not inherit font features */
+  font-size: inherit;
+  font-family: inherit;
+}
+
 .tree button,
 .tree input[type=file] {
-  font-size: 1rem;
   font-weight: bold;
   padding: 6px 12px 6px 12px;
   border: none;
-  background: #e0e1e2 none;
-  color: rgba(0,0,0,.6);
+  background-color: #e0e1e2;
+  color: rgba(0,0,0,.8);
+  border-radius: 3px;
+}
+
+.tree button:disabled,
+.tree button.primary:disabled,
+.tree input[type=file]:disabled {
+  background-color: #e0e1e2;
+  color: rgba(0,0,0,.4);
+}
+
+.tree button.primary {
+  background-color: #2185d0;
+  color: rgba(255, 255, 255, 0.9);
 }
 
 .breadcrumbs {
@@ -42,10 +61,14 @@
   margin: 6px 0 12px 0;
 }
 
-.searchbox input {
-  /* By default input fields do not inherit font features */
-  font-size: inherit;
-  font-family: inherit;
+/* TODO: This is some "fancy" search box styling, not sure I prefer this over standard */
+.searchbox input[type=search] {
+  width: 100%;
+  border-width: 1px;
+  border-radius: 3px;
+  border-top: none;
+  border-left: none;
+  border-right: none;
 }
 
 .node {
@@ -209,6 +232,7 @@
 /* The first node in a tree is special (when not root node), we show it really big, without the star */
 .node.first > .nc .name {
   font-size: 150%;
+  font-weight: bold;
   margin: 0 0 6px 6px;
 }
 
@@ -235,7 +259,7 @@
   background: white;
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 2; /* dialogs need to be above the overlay */
   border-radius: 3px;
   padding: 6px;
   border: 1px #eee solid;
@@ -245,6 +269,17 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+}
+
+.dialogOverlay {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .dialog .closeButton {
@@ -276,12 +311,13 @@
 }
 
 .dialog header h1 {
-  font-size: 1.5rem;
-  font-weight: normal;
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 12px;
 }
 
 tree-opmlimport-dialog {
-  width: 300px;
+  width: 400px;
 }
 
 tree-opmlimport-dialog .error {
@@ -292,6 +328,10 @@ tree-opmlimport-dialog .error {
 tree-opmlimport-dialog .success {
   color: green;
   display: none;
+}
+
+tree-opmlimport-dialog input.uploadOpml {
+  max-width: 350px;
 }
 
 tree-opmlimport-dialog div.error,
@@ -317,6 +357,7 @@ tree-opmlimport-dialog h1 {
     position: fixed;
     display: block;
   }
+
 }
 
 /* Small devices (landscape phones, 576px and up) 
