--- a/src/css/tree.css
+++ b/src/css/tree.css
@@ -79,7 +79,7 @@
   display: block;
   /* This is spacing before a node so that it does not "stick" to the previous one.
      Hard to get the right balance between this and the line-height. */
-  margin-top: 4px;
+  padding-top: 4px;
 }
 
 .node .nc {
