Further work on completing nodes, still need to remove node from DOM tree when it has been completed and we don't show completion.

--- a/src/css/tree.css
+++ b/src/css/tree.css
@@ -293,6 +293,16 @@ a.embeddedLink {
   margin-left: -2.5ch;
 }
 
+/* Completion status */
+.node.completed,
+.completed-visual-only {
+  text-decoration: line-through;
+}
+
+.tree.hideCompleted .node.completed {
+  display: none;
+}
+
 .hidden {
   display: none;
 }
