--- a/src/css/tree.css
+++ b/src/css/tree.css
@@ -78,7 +78,6 @@
   display: flex;
 }
 
-/* TODO: This is some "fancy" search box styling, not sure I prefer this over standard */
 .searchbox input[type=search] {
   flex-grow: 1;
   margin-right: 6px;
@@ -132,7 +131,6 @@
   color: #666;
 }
 
-/* TODO: replace the unicode characters with svg icons */
 .nc > a:before {
   content: '●'; /* BLACK CIRCLE, 25CF */
 }
@@ -219,12 +217,11 @@
   padding-left: 2px;
 }
 
-/* This is a kludge for Firefox: when the name div has no content it has zero height, and then
+/*
+   This is a kludge for Firefox: when the name div has no content it has zero height, and then
    firefox collapses the element and messes up our layout. Here we just insert a bogus character
    when the element is empty.
-
-   TODO: fix this in a better way. There is no relative height unit that represents "one line" so
-   we can't min-height it. This is also explained here: https://stackoverflow.com/a/23530317 */
+*/
 .node .name:empty:before {
   content: ' ';
 }
